# samples

./: .gitignore  .gitmodules  LICENSE
qastra/: CMakeLists.txt  qastra.cpp  qastra.h
qrastr/qrastr/: CMakeLists.txt  CMakePresets.json.template  ColPropForm.cpp  ColPropForm.h  CondFormat.h  CondFormatManager.cpp  IDataBlocksWrappers.h  QDataBlocks.h  SDLChild.cpp  Settings.h  app.cpp  app.h  appsettings.json  astra_shared.h  bg.sh  checkboxdelegate.cpp  checkboxdelegate.h  comboboxdelegate.cpp  comboboxdelegate.h  common.h  common_qrastr.cpp  common_qrastr.h  condformatjson.cpp  condformatjson.h  custommodel.cpp  custommodel.h  delegatecheckbox.h  delegatecombobox.h  delegatedoubleitem.h  doubleitemdelegate.cpp  doubleitemdelegate.h  filterlineedit.h  filtertableheader.cpp  filtertableheader.h  formcalcidop.cpp  formcalcidop.h  formexportcsv.cpp  formexportcsv.h  formfilenew.cpp  formfilenew.h  (+85 more)
qrastr/qrastr/Files/: 040207-1.pnt  cx195.grf  cx195.rg2  test9.rst
qrastr/qrastr/Files/RastrKZ/: cx195.grf  cx195.rst  cx195_pr_.rst  s_1.rst  s_1_2_3_.grf  s_2.rst  s_3.rst  s_4.grf  s_4.rst  s_5.grf  s_5.rst  s_5_1.rst  s_6.grf  s_6.rst  s_7.grf  s_7.rst
qrastr/qrastr/astra_headers/: ResourceManager.h  UIForms.h
qrastr/qrastr/cmake/: add_qtitan_library.cmake  add_thirdparty_library.cmake  compiler_and_platform.cmake  platform_detection.cmake
qrastr/qrastr/form/: OPF.fm  OPF.json  _ти.fm  multipnt.fm  poisk.fm  АЛАР.fm  АПНУ.fm  АПНУ.json  Актуализация.fm  Анцапфы.fm  БарсМДП.fm  ВРДО.fm  ВРДО.json  КОценка.fm  КОценка.json  Несимметрия.fm  Общие.fm  Общие.json  Объединение.fm  Отладка.fm  Сечения.fm  Сечения.json  автоматика-д.json  автоматика.fm  вариант-e р-ты.json  группы.fm  динамика.fm  динамика.json  контр-е величины.json  лапну.fm  метео.fm  оборудование.fm  оптимизация p.fm  старые СВ.fm  старые СВ.json  ти.fm  траектория утяжеления.fm  трансформаторы.fm  хопс.fm
qrastr/qrastr/macro/: test_infra.py
qrastr/qrastr/plugins/barsmdp/: CMakeLists.txt  plugin_barsmdp.cpp
qrastr/qrastr/plugins/basictools/: CMakeLists.txt  basictoolsplugin.h
qrastr/qrastr/plugins/extrafilters/: CMakeLists.txt  extrafiltersplugin.h
qrastr/qrastr/plugins/rastr/: CMakeLists.txt  plugin_interfaces.h  pluginrastr.cpp  pluginrastr.h
qrastr/qrastr/plugins/ti/: CMakeLists.txt  plugin_ti_interfaces.h  pluginti.cpp
qrastr/qrastr/qastra/: main.cpp  qastra.cpp
qrastr/qrastr/qmcr/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mcrwnd.cpp  mcrwnd.h  pyhlp.cpp  pyhlp.h  scihlp.cpp  scihlp.h  tst.py  tst.qml  tst2_dialog.h  tst_toolbox.cpp  tst_toolbox.h  tst_toolbox.ui
qrastr/qrastr/qmcr/forms/: dlgfindrepl.cpp  dlgfindrepl.h  dlgfindrepl.ui
qrastr/qrastr/resources/: qrastr.qrc  qrastr_ru_RU.ts  ссылка на иконки.txt
qrastr/qrastr/src/app/: main.cpp
qrastr/qrastr/src/app/adapters/: engineContext.h
qrastr/qrastr/src/app/astra/: CommonConst.h  qastra.cpp  qastra.h  qastra_events_data.h  qbarsmdp.h  qti.cpp  qti.h
qrastr/qrastr/src/app/astra_headers/: UIForms.h
qrastr/qrastr/src/app/core/: app.cpp  app.h  mainwindow.cpp  mainwindow.h  startupLoader.cpp  startupLoader.h  uiBuilder.cpp  uiBuilder.h
qrastr/qrastr/src/app/data/: IDataBlocksWrappers.h  ITableRepository.h  QDataBlocks.h  backInfoCache.cpp  backInfoCache.h  condFormatStorage.cpp  condFormatStorage.h  rastrdatamodel.cpp  rastrdatamodel.h  rcol.cpp  rcol.h  rdata.cpp  rdata.h  rmodel.cpp  rmodel.h  rtablesdatamanager.cpp  rtablesdatamanager.h  searchableComboEditor.cpp  searchableComboEditor.h  searchableComboPopup.cpp  searchableComboPopup.h  searchableComboRepository.cpp  сolumnEditorInfo.h
qrastr/qrastr/src/app/delegates/: delegatecheckbox.cpp  delegatecombobox.cpp  delegatecombobox.h  delegatedoubleitem.cpp  delegatedoubleitem.h
qrastr/qrastr/src/app/formatting/: CondFormat.cpp  CondFormat.h  CondFormatManager.cpp  CondFormatManager.h  Palette.h  condFormat.cpp  condFormat.h  condFormatController.cpp  condFormatController.h  condFormatDialog.cpp  condFormatDialog.h  condFormatManager.cpp  condFormatManager.h  condFormatStorage.cpp  condFormatStorage.h  condformatjson.cpp  condformatjson.h
qrastr/qrastr/src/app/forms/: ColPropForm.cpp  ColPropForm.h  ColPropForm.ui  calcIacceptableDialog.cpp  calcIacceptableDialog.h  checkboxListDialog.cpp  checkboxListDialog.h  colPropDialog.cpp  colPropDialog.h  dataSettingsWidget.cpp  dataSettingsWidget.h  exportCSVdialog.cpp  exportCSVdialog.h  fileNewDialog.cpp  fileNewDialog.h  formcalcidop.cpp  formcalcidop.h  formcalcidop.ui  formexportcsv.cpp  formexportcsv.h  formexportcsv.ui  formfilenew.cpp  formfilenew.h  formgroupcorrection.cpp  formgroupcorrection.h  formgroupcorrection.ui  formimportcsv2.cpp  formimportcsv2.h  (+45 more)
qrastr/qrastr/src/qmcr/: CMakeLists.txt  globalProtocolWidget.cpp  globalProtocolWidget.h  mainwindow.cpp  mcrwnd.cpp  mcrwnd.h  protocolLogWidget.cpp  protocolLogWidget.h  pyhlp.cpp  pyhlp.h  qmcr_api.h  qmcr_ru_RU.ts  sciHlpBase.cpp  sciHlpBase.h  sciLogViewer.cpp  sciLogViewer.h  sciPyEditor.cpp  sciPyEditor.h  scihlp.cpp  scihlp.h  tst.qml  tst2_dialog.cpp  tst2_dialog.ui  tst_toolbox.cpp  tst_toolbox.ui
qt-scintilla-editor/qt-scintilla-editor/: CMakeLists.txt
qt-scintilla-editor/qt-scintilla-editor/cmake/: pybind11.cmake
qt-scintilla-editor/qt-scintilla-editor/forms/: qscintillaeditor.ui
qt-scintilla-editor/qt-scintilla-editor/include/: buffer.h  icondb.h  py_fun.h  qscintillaeditor.h  util.h
qt-scintilla-editor/qt-scintilla-editor/resources/colorschemes/: default.xml
qt-scintilla-editor/qt-scintilla-editor/resources/conf/: languages.xml
qt-scintilla-editor/qt-scintilla-editor/src/: buffer.cpp  colorscheme.cpp  encoding.cpp  encodingdialog.cpp  icondb.cpp  language.cpp  languagedialog.cpp  py_fun.cpp  qscintillaeditor.cpp
qt-scintilla-editor/qt-scintilla-editor/tests/: t1.py
qtitan2_cmake/: CMakeLists.txt  main.cpp
qtplugin/qtpluginex/: CMakeLists.txt  main.cpp  test-plugin-interface.hpp  test-plugin.cpp  test-plugin.h  test-plugin.hpp
qtr/qtr/: CMakeLists.txt  main.cpp  tst_lng_ru_RU.ts
qtr/qtr/i18n/: tst_lng_ru_RU.ts
(+441 files in other folders)
